added enable preview for test cases