@@ -221,6 +221,9 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
           <release>21</release>
+          <source>21</source>
+          <target>21</target>
+          <compilerArgs>--enable-preview</compilerArgs>
         </configuration>
       </plugin>
 
@@ -229,6 +232,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.2.5</version>
         <configuration>
+          <argLine>--enable-preview</argLine>
           <systemPropertyVariables>
             <test.virtual.threads>${virtual.threads}</test.virtual.threads>
           </systemPropertyVariables>
@@ -333,6 +337,7 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
             <configuration>
+              <argLine>--enable-preview</argLine>
               <groups>org.sonatype.goodies.testsupport.group.Java21TestGroup</groups>
             </configuration>
           </plugin>
@@ -358,6 +363,7 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
             <configuration>
+              <argLine>--enable-preview</argLine>
               <groups>org.sonatype.goodies.testsupport.group.VirtualThreadTestGroup</groups>
             </configuration>
           </plugin>
