@@ -217,6 +217,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.2.5</version>
         <configuration>
+          <argLine>--enable-preview</argLine>
           <systemPropertyVariables>
             <test.virtual.threads>${virtual.threads}</test.virtual.threads>
             <java.util.concurrent.ForkJoinPool.common.parallelism>16</java.util.concurrent.ForkJoinPool.common.parallelism>
@@ -329,6 +330,7 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
             <configuration>
+              <argLine>--enable-preview</argLine>
               <groups>org.sonatype.goodies.testsupport.group.Java21TestGroup</groups>
             </configuration>
           </plugin>
@@ -354,6 +356,7 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
             <configuration>
+              <argLine>--enable-preview</argLine>
               <groups>org.sonatype.goodies.testsupport.group.VirtualThreadTestGroup</groups>
             </configuration>
           </plugin>
